--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        /*body{
             margin:0;
         }
         /*html{
             font-size: 5px;
         }*/
-        .forma1{
+        /*.forma1{
             background-color: red;
-            /*width: 50%;*/
-            width: 100vw;
-            height: 100vh;
-            font-size: 2rem;
-            color: white;
-            font-weight: bolder;
+            /*width: 50%;
+            width: 250px;
+            height: 250px;
+            /*padding-top: 125px;
+            padding-right: 125px;
+            padding-left: 125px;
+            padding-bottom: 125px;
+            padding: 125px 50px 25px 75px;
+            /*border-top: 15px solid orange;
+            border-right: 20px solid orange;
+            border: 12px solid yellow;
+            margin: 25px;
         }
         .forma2{
             background-color: green;
@@ -38,10 +44,94 @@
             height: 100vh;
             color:white;
         }
+        /*.span1{
+            background-color: blue;
+            color:white;
+            padding:25px;
+            border: 15px solid orange;
+            margin: 15px;
+        }
+        .span2{
+            background-color: green;
+            color:white;
+            width: 350px; /*ERROR COMÚN
+        }*/
+        /*.contenedor{
+            background-color: rgba(122,123,123, 0.2);
+        }
+        .uno{
+            background-color: rgba(234,3,5,0.2);
+            padding: 5px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        .dos{
+            background-color: rgba(2,234,5,0.2);
+            border: 5px solid green;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        .tres{
+            background-color: rgba(4,3,234,0.2);
+            padding: 5px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }*/
+        /*body{
+            margin:0;
+        }
+        .uno{
+            background-color: red;
+            width: 49%;
+            display: inline-block;
+        }
+        .dos{
+            background-color: green;
+            width: 49%;
+            display: inline-block;
+        }
+        .tres{
+            background-color: orange;
+            display: inline;
+        }
+        .cuatro{
+            background-color: yellow;
+            display:block;
+        }*/
+        /**{
+            /*box-sizing: content-box;
+            box-sizing: border-box;
+            margin:0;
+        }
+        .uno{
+            background-color: red;
+            padding: 35px;
+            border:5px solid green;
+            margin: 15px;
+            width: 250px;
+        }*/
+        *{
+            box-sizing: border-box;
+            margin:0;
+        }
+        .contenedor{
+            display:flex;
+            background-color: orange;
+            padding:25px;
+        }
+        .uno{
+            background-color: green;
+            padding:25px;
+        }
+        .dos{
+            background-color: yellow;
+            padding:25px;
+        }
+
     </style>
 </head>
 <body>
-    <div class="forma1">
+    <!--<div class="forma1">
         Lorem ipsum dolor 
     </div>
     <div class="forma2">
@@ -52,6 +142,22 @@
     </div>
     <div class="forma4">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident laboriosam maiores doloremque nobis mollitia corporis adipisci alias ab ipsam. Autem voluptate deleniti nihil eveniet ipsam, quasi quod architecto amet?
+    </div>-->
+    <!--<span class="span1">
+        HOLA MUNDO
+    </span>
+    <span class="span2">
+        ADIOS MUNDO
+    </span>
+    <div class="contenedor">
+        <span class="uno">Contenido 1</span>
+        <span class="dos">Contenido 2</span>
+        <div class="tres">Contenido 3</div>
+        <span class="cuatro">Contenido 4</span>
+    </div>-->
+    <div class="contenedor">
+        <div class="uno">Contenido 1</div>
+        <div class="dos">Contenido 2</div>
     </div>
 </body>
 </html>
